Fix deprecation warnings for Java 16.
There are plenty more in lib/, but a number of those may be obsolete.

git-svn-id: http://svn.code.sf.net/p/kolmafia/code@20917 b29ace70-8910-0410-8dcc-aa2fc6433167